--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CardAlm">
+        <activity android:name=".RegisterActivity2"></activity>
         <activity android:name=".FabricantePageActivity" />
         <activity android:name=".MenuActivity" />
         <activity android:name=".RegisterActivity1" />
