--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CardAlm">
-        <activity android:name=".VehiculoActivity"></activity>
+        <activity android:name=".AllFabricanteActivity"></activity>
+        <activity android:name=".VehiculoActivity" />
         <activity android:name=".RegisterActivity2" />
         <activity android:name=".FabricantePageActivity" />
         <activity android:name=".MenuActivity" />
