--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CardAlm">
-        <activity android:name=".AllVehiculosActivity"></activity>
+        <activity android:name=".AllUsersActivity"></activity>
+        <activity android:name=".AllVehiculosActivity" />
         <activity android:name=".AllFabricanteActivity" />
         <activity android:name=".VehiculoActivity" />
         <activity android:name=".RegisterActivity2" />
